--- a/ChengYuDaHuiGame/res/layout/speak_game_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/speak_game_layout.xml
@@ -30,13 +30,27 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/speak_game_start"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/mode_setting_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/start_game"
-        android:visibility="gone" />
+        android:visibility="gone" >
+
+        <Button
+            android:id="@+id/speak_game_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/start_game" />
+        <Button 
+            android:id="@+id/speak_game_time_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/speak_game_start"
+            android:text="@string/speak_time_setting"
+            />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/local_game_layout"
