--- a/ChengYuDaHuiGame/res/layout/speak_game_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/speak_game_layout.xml
@@ -33,7 +33,7 @@
     <RelativeLayout
         android:id="@+id/mode_setting_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:visibility="gone" >
 
@@ -42,14 +42,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/start_game" />
-        <Button 
+            android:text="@string/start_game"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <Button
             android:id="@+id/speak_game_time_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/speak_game_start"
+            android:layout_centerHorizontal="true"
             android:text="@string/speak_time_setting"
-            />
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <RelativeLayout
