--- a/ChengYuDaHuiGame/res/layout/time_setting_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/time_setting_layout.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:hint="@string/setting_time" />
+        android:hint="@string/setting_time"
+        android:inputType="number"/>
 
     <TextView
         android:layout_width="match_parent"
