--- a/ChengYuDaHuiGame/res/layout/connected_info.xml
+++ b/ChengYuDaHuiGame/res/layout/connected_info.xml
@@ -13,11 +13,22 @@
         android:background="@drawable/btn_selector"
         android:padding="10dp"
         android:text="@string/disconnect" />
+    <Button 
+        android:id="@+id/btn_ci_start"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/btn_ci_disconnect"
+        android:background="@drawable/btn_selector"
+        android:padding="10dp"
+        android:text="@string/start_game"
+        
+        />
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/btn_ci_disconnect" />
+        android:layout_above="@+id/btn_ci_start" />
 
 </RelativeLayout>
