baidu frontia init

--- a/ChengYuDaHuiGame/res/menu/main.xml
+++ b/ChengYuDaHuiGame/res/menu/main.xml
@@ -8,5 +8,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    
+     <item
+        android:id="@+id/action_frontia"
+        android:orderInCategory="100"
+        android:title="BaiduForntia"
+        app:showAsAction="never"/>
 
 </menu>
