--- a/ChengYuDaHuiGame/res/layout/get_app_list_item.xml
+++ b/ChengYuDaHuiGame/res/layout/get_app_list_item.xml
@@ -1,38 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_app_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/card_bg"
+    android:gravity="center_vertical"
+    android:orientation="vertical" >
 
-    <com.angel.devil.view.AsyncImageView
-        android:id="@+id/file_img"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="5dp"
-        android:src="@drawable/ic_launcher" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp" >
 
-    <LinearLayout
+        <com.angel.devil.view.AsyncImageView
+            android:id="@+id/iv_app_icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_launcher" />
+
+        <Button
+            android:id="@+id/btn_download"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/bt_green_bg"
+            android:focusable="false"
+            android:text="下载" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/btn_download"
+            android:layout_toRightOf="@id/iv_app_icon" >
+
+            <TextView
+                android:id="@+id/tv_app_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="name"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/tv_app_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="工具类"
+                android:textColor="#ff00deff" />
+
+            <TextView
+                android:id="@+id/tv_app_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_app_label"
+                android:textColor="@android:color/black" />
+
+            <RelativeLayout
+                android:id="@+id/rl_downloading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_app_label"
+                android:visibility="gone"
+                 >
+
+                <TextView
+                    android:id="@+id/tv_dl_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/tv_dl_percent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@android:color/black" />
+                
+                <ProgressBar
+                    android:id="@+id/bar_downloading"
+                    style="@style/Custom.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" 
+                    android:layout_below="@+id/tv_dl_progress"
+                    />
+                
+            </RelativeLayout>
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <View
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/file_img"
-        android:layout_centerVertical="true"
-        android:orientation="vertical" >
+        android:background="@drawable/divider_line" />
 
-        <TextView
-            android:id="@+id/file_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="name"
-             />
+    <TextView
+        android:id="@+id/tv_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#d6d6d6"
+        android:text="This is a test text."
+        android:textColor="@android:color/black" />
 
-        <TextView
-            android:id="@+id/file_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-			/>
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
