--- a/ChengYuDaHuiGame/res/layout/zhaoyan_forget_password.xml
+++ b/ChengYuDaHuiGame/res/layout/zhaoyan_forget_password.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/btn_next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="下一步" />
+                android:text="找回密码" />
         </LinearLayout>
     </LinearLayout>
 
