--- a/ChengYuDaHuiGame/res/values/colors.xml
+++ b/ChengYuDaHuiGame/res/values/colors.xml
@@ -5,5 +5,11 @@
     <color name="gray">#696969</color>
     <color name="table_title_selected">#5d91be</color>
     <color name="table_title_unselected">#696969</color>
+    
+    <color name="bg_item_white">#ffffff</color>
+    <color name="bg_item_white_pressed">#e6e6e6</color>
+    <color name="splitline">#e6e6e6</color>
+    
+    <color name="translucent_background">#80000000</color>
 
 </resources>
