--- a/ChengYuDaHuiGame/res/layout/zhaoyan_account_setting_activity.xml
+++ b/ChengYuDaHuiGame/res/layout/zhaoyan_account_setting_activity.xml
@@ -25,7 +25,7 @@
                 android:background="@drawable/item_white_bg"
                 android:clickable="true"
                 android:padding="10dp"
-                android:text="账号：xxx"
+                android:text="账号："
                 android:textSize="16sp" />
 
             <include layout="@layout/splitline" />
@@ -34,10 +34,35 @@
                 android:id="@+id/tv_gold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/item_white_bg"
                 android:clickable="true"
                 android:padding="10dp"
-                android:text="金币：xxx"
+                android:text="金币："
+                android:textSize="16sp" />
+
+            <include layout="@layout/splitline" />
+
+            <TextView
+                android:id="@+id/tv_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/item_white_bg"
+                android:clickable="true"
+                android:padding="10dp"
+                android:text="邮箱："
+                android:textSize="16sp" />
+
+            <include layout="@layout/splitline" />
+
+            <TextView
+                android:id="@+id/tv_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/item_white_bg"
+                android:clickable="true"
+                android:padding="10dp"
+                android:text="电话："
                 android:textSize="16sp" />
 
             <include layout="@layout/splitline" />
