--- a/ChengYuDaHuiGame/res/layout/zhaoyan_modify_email.xml
+++ b/ChengYuDaHuiGame/res/layout/zhaoyan_modify_email.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical" >
 
         <LinearLayout
+            android:id="@+id/ll_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
