--- a/ChengYuDaHuiGame/res/layout/zhaoyan_login.xml
+++ b/ChengYuDaHuiGame/res/layout/zhaoyan_login.xml
@@ -78,6 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:background="@drawable/text_click_bg"
                 android:clickable="true"
                 android:padding="10dp"
                 android:text="快速注册" />
@@ -87,6 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:background="@drawable/text_click_bg"
                 android:clickable="true"
                 android:padding="10dp"
                 android:text="忘记密码？" />
@@ -99,6 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/text_click_bg"
         android:clickable="true"
         android:padding="10dp"
         android:text="新用户注册"
