--- a/ChengYuDaHuiGame/res/layout/get_app_list_item.xml
+++ b/ChengYuDaHuiGame/res/layout/get_app_list_item.xml
@@ -23,17 +23,20 @@
             android:layout_margin="5dp"
             android:src="@drawable/ic_launcher" />
 
-        <Button
+        <com.zhaoyan.common.progressbutton.SubmitProcessButton
             android:id="@+id/btn_download"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
+            android:minWidth="100dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="@drawable/bt_green_bg"
+            android:gravity="center"
+            android:textColor="@android:color/white"
             android:focusable="false"
-            android:text="下载" />
+            android:textSize="12sp"
+             />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -67,6 +70,7 @@
                 android:layout_below="@+id/tv_app_label"
                 android:textColor="@android:color/black" />
 
+            <!-- no use -->
             <RelativeLayout
                 android:id="@+id/rl_downloading"
                 android:layout_width="wrap_content"
@@ -98,6 +102,7 @@
                     />
                 
             </RelativeLayout>
+            <!-- no use -->
         </RelativeLayout>
     </RelativeLayout>
 
