--- a/ZhaoYanCommunicationLib/res/values/dimens.xml
+++ b/ZhaoYanCommunicationLib/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="corner_radius">2dp</dimen>
+    <dimen name="layer_padding">0dp</dimen>
+    
 </resources>
