--- a/ChengYuDaHuiGame/res/layout/get_app_main.xml
+++ b/ChengYuDaHuiGame/res/layout/get_app_main.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#faf3f3"
-    android:orientation="vertical" 
     >
 
     <ListView
@@ -16,5 +15,14 @@
         android:padding="10dp"
         android:listSelector="@android:color/transparent"
         ></ListView>
+    
+    <ProgressBar 
+        android:id="@+id/bar_info_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        style="@android:style/Widget.ProgressBar.Large.Inverse"
+        android:visibility="gone"
+        />
 
-</LinearLayout>
+</RelativeLayout>
