--- a/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
@@ -4,17 +4,31 @@
     android:layout_height="match_parent"
     tools:context="com.zhaoyan.juyou.game.chengyudahui.activity.MainMenuActivity" >
 
+    <RelativeLayout
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true" >
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="50dp"
-        android:layout_centerInParent="true"
-        android:orientation="vertical" >
+        android:layout_height="match_parent"
+        android:layout_below="@id/title"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/activity_middle"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp" >
 
             <RelativeLayout
                 android:layout_width="0dp"
@@ -79,8 +93,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp" >
 
             <RelativeLayout
                 android:layout_width="0dp"
