--- a/ChengYuDaHuiGame/res/layout/appinfo.xml
+++ b/ChengYuDaHuiGame/res/layout/appinfo.xml
@@ -132,19 +132,19 @@
         android:background="#D5DAE0"
         >
         
-        <Button 
-            android:id="@+id/ib_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="35.0dp"
-            android:background="@drawable/ps__button_digg"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="5dp"
-            android:text="@android:string/cancel"
-            android:textSize="14.0sp"
-            android:textColor="@android:color/black"
-            android:gravity="center"
-            />
+<!--         <Button  -->
+<!--             android:id="@+id/ib_cancel" -->
+<!--             android:layout_width="wrap_content" -->
+<!--             android:layout_height="35.0dp" -->
+<!--             android:background="@drawable/ps__button_digg" -->
+<!--             android:layout_centerVertical="true" -->
+<!--             android:layout_alignParentRight="true" -->
+<!--             android:layout_margin="5dp" -->
+<!--             android:text="@android:string/cancel" -->
+<!--             android:textSize="14.0sp" -->
+<!--             android:textColor="@android:color/black" -->
+<!--             android:gravity="center" -->
+<!--             /> -->
         
         <com.zhaoyan.common.progressbutton.SubmitProcessButton
             android:id="@+id/btn_d"
