--- a/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
@@ -41,13 +41,16 @@
                     android:layout_centerInParent="true"
                     android:src="@drawable/bg_main_menu_1" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:clickable="true"
                     android:onClick="launchChengYuStudy"
-                    android:src="@drawable/icon_apk" />
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text="@string/study_every_day"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -61,13 +64,16 @@
                     android:layout_centerInParent="true"
                     android:src="@drawable/bg_main_menu_1" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:clickable="true"
-                    android:onClick="launchChengYuStudy"
-                    android:src="@drawable/icon_apk" />
+                    android:onClick="launchSpeakGuessGame"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text="@string/game_by_speak"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -81,13 +87,16 @@
                     android:layout_centerInParent="true"
                     android:src="@drawable/bg_main_menu_1" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:clickable="true"
-                    android:onClick="launchChengYuStudy"
-                    android:src="@drawable/icon_apk" />
+                    android:onClick="launchPictureGuessGame"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text="看图猜成语"
+                    android:textSize="15sp" />
             </RelativeLayout>
         </LinearLayout>
 
@@ -111,13 +120,16 @@
                     android:layout_centerInParent="true"
                     android:src="@drawable/bg_main_menu_1" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:clickable="true"
-                    android:onClick="launchChengYuStudy"
-                    android:src="@drawable/icon_apk" />
+                    android:onClick="launchChengYuNewComment"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text="成语新解"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -151,13 +163,16 @@
                     android:layout_centerInParent="true"
                     android:src="@drawable/bg_main_menu_1" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:clickable="true"
-                    android:onClick="launchChengYuStudy"
-                    android:src="@drawable/icon_apk" />
+                    android:onClick="launchJifen"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text="@string/get_score"
+                    android:textSize="15sp" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
