--- a/ChengYuDaHuiGame/res/layout/activity_launcher.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_launcher.xml
@@ -19,13 +19,20 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:clickable="true"
-            android:onClick="launchMainMenu"
-            android:src="@drawable/start_game_selector" />
+            android:gravity="center"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:onClick="launchMainMenu"
+                android:src="@drawable/start_game_selector" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
