--- a/ChengYuDaHuiGame/res/layout/paint_surface.xml
+++ b/ChengYuDaHuiGame/res/layout/paint_surface.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#1affffff"
     android:layout_height="match_parent" >
 
     <TextView
@@ -10,20 +11,21 @@
         android:layout_centerHorizontal="true"
         android:clickable="false"
         android:gravity="center"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/paint_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/paint_result_layout"
-        android:layout_below="@+id/paint_chengyu_name" />
+        android:layout_width="300dip"
+        android:layout_height="300dip"
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
+        android:layout_marginTop="10dip"
         android:id="@+id/paint_result_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/paint_image_view"
         android:orientation="horizontal" >
 
         <Button
@@ -38,14 +40,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/game_right" />
+            android:text="@string/game_confirm" />
 
         <Button
             android:id="@+id/paint_change_word_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/game_next" />
+            android:text="@string/game_next"
+            android:visibility="gone" />
     </LinearLayout>
 
 </RelativeLayout>
