--- a/ChengYuDaHuiGame/res/layout/activity_dictate.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_dictate.xml
@@ -26,6 +26,7 @@
             android:id="@+id/first_layout"
             android:layout_width="75dip"
             android:layout_height="95dip"
+            android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
             <TextView
@@ -62,6 +63,8 @@
             android:id="@+id/second_layout"
             android:layout_width="75dip"
             android:layout_height="95dip"
+            android:layout_marginLeft="1dip"
+            android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
             <TextView
@@ -98,6 +101,8 @@
             android:id="@+id/third_layout"
             android:layout_width="75dip"
             android:layout_height="95dip"
+            android:layout_marginLeft="1dip"
+            android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
             <TextView
@@ -134,6 +139,7 @@
             android:id="@+id/fourth_layout"
             android:layout_width="75dip"
             android:layout_height="95dip"
+            android:layout_marginLeft="1dip"
             android:orientation="vertical" >
 
             <TextView
@@ -179,7 +185,10 @@
         android:id="@+id/dictate_word_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/dictate_show_result" />
+        android:layout_above="@+id/dictate_show_result"
+        android:paddingLeft="5dip"
+        android:paddingRight="5dip"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/dictate_show_result"
