--- a/ChengYuDaHuiGame/res/layout/paint_surface.xml
+++ b/ChengYuDaHuiGame/res/layout/paint_surface.xml
@@ -21,6 +21,7 @@
         android:layout_centerHorizontal="true" />
 
     <LinearLayout
+        android:gravity="center"
         android:layout_marginTop="10dip"
         android:id="@+id/paint_result_layout"
         android:layout_width="match_parent"
@@ -29,24 +30,23 @@
         android:orientation="horizontal" >
 
         <Button
+            android:textSize="30sp"
             android:id="@+id/paint_clean_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="100dip"
+            android:layout_height="75dip"
             android:text="@string/paint_clean" />
 
         <Button
+            android:textSize="30sp"
             android:id="@+id/paint_chengyu_right"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="100dip"
+            android:layout_height="75dip"
             android:text="@string/game_confirm" />
 
         <Button
             android:id="@+id/paint_change_word_btn"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/game_next"
             android:visibility="gone" />
     </LinearLayout>
